[package]
name = "custom_serde"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
once_cell = "1.15.0"
serde = { version = "1.0.144", features = ["serde_derive"] }
serde_json = "1.0.85"
serde_with = "2.0.1"
serde_yaml = "0.9.13"
toml = "0.5.9"
uuid = { version = "1.1.2", features = ["v4", "serde"] }
